# celevid

./: .gitignore  AGENTIC_MODE.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ORCHESTRATION_RESULTS.md  README.md  README_AGENTIC.md  agentic_pipeline.py  audio_processor.py  caption_service.py  command_interpreter.py  content_editor.py  content_editor_v2.py  editor_agent.py  main.py  process_video.py  pyproject.toml  script_orchestrator.py  session_state.py  test_imports.py  test_orchestration.py  transcript_cleaner.py  video_editor.py
